 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Release 0.11.2 (Unreleased)

INCOMPATIBLE CHANGES

IMPROVEMENTS

OPTIMIZATIONS

PIG-2769: a simple logic causes very long compiling time on pig 0.10.0 (njw45 via dvryaboy) (prev. applied to 0.12)

BUG FIXES

PIG-3329: RANK operator failed when working with SPLIT (xalan via cheolsoo)

PIG-3345: Handle null in DateTime functions (rohini)

PIG-3315: Automaton dependency missing from Pig 11.1-h2 POM. (stevel@apache.org via daijy)

PIG-3223: AvroStorage does not handle comma separated input paths (dreambird via rohini)

PIG-3281: Pig version in pig.pom is incorrect in branch-0.11 (cheolsoo)

PIG-3282: Pig pom.xml does not bring in joda-time as dependency (sushanth via daijy)

PIG-3262: Pig contrib 0.11 doesn't compile on certain rpm systems (mgrover via cheolsoo)

PIG-3264: mvn signanddeploy target broken for pigunit, pigsmoke and piggybank (billgraham)


Release 0.11.1

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-3256: Upgrade jython to 2.5.3 (legal concern) (daijy)

PIG-2988: start deploying pigunit maven artifact part of Pig release process (njw45 via rohini)

PIG-3148: OutOfMemory exception while spilling stale DefaultDataBag. Extra option to gc() before spilling large bag. (knoguchi via rohini)

PIG-3216: Groovy UDFs documentation has minor typos (herberts via rohini)

PIG-3202: CUBE operator not documented in user docs (prasanth_j via billgraham)

OPTIMIZATIONS

BUG FIXES

PIG-3267: HCatStorer fail in limit query (daijy)

PIG-3252: AvroStorage gives wrong schema for schemas with named records (mwagner via cheolsoo)

PIG-3132: NPE when illustrating a relation with HCatLoader (daijy)

PIG-3194: Changes to ObjectSerializer.java break compatibility with Hadoop 0.20.2 (prkommireddi via dvryaboy)

PIG-3241: ConcurrentModificationException in POPartialAgg (dvryaboy)
