@@ -24,7 +24,6 @@ import org.apache.pig.EvalFunc;
 import org.apache.pig.data.DataType;
 import org.apache.pig.data.Tuple;
 import org.joda.time.DateTime;
-import org.joda.time.DateTimeZone;
 
 /**
  * This method should never be used directly, use {@link ToDate}.
@@ -36,12 +35,7 @@ public class ToDateISO extends EvalFunc<DateTime> {
             return null;
         }
         String dtStr = DataType.toString(input.get(0));
-        DateTimeZone dtz = ToDate.extractDateTimeZone(dtStr);
-        if (dtz == null) {
-            return new DateTime(dtStr);
-        } else {
-            return new DateTime(dtStr, dtz);
-        }
+        return ToDate.extractDateTime(dtStr);
     }
 
 }
