@@ -28,7 +28,6 @@ import java.util.LinkedList;
 import java.util.Map;
 
 import org.joda.time.DateTime;
-import org.joda.time.DateTimeZone;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -511,12 +510,7 @@ public class Utf8StorageConverter implements LoadStoreCaster {
         }
         try {
             String dtStr = new String(b);
-            DateTimeZone dtz = ToDate.extractDateTimeZone(dtStr);
-            if (dtz == null) {
-                return new DateTime(dtStr);
-            } else {
-                return new DateTime(dtStr, dtz);
-            }
+            return ToDate.extractDateTime(dtStr);
         } catch (IllegalArgumentException e) {
             LogUtils.warn(this, "Unable to interpret value " + Arrays.toString(b) + " in field being " +
                     "converted to datetime, caught IllegalArgumentException <" +
