@@ -20,6 +20,7 @@ package org.apache.pig.test;
 
 import java.io.File;
 import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Iterator;
@@ -30,6 +31,7 @@ import junit.framework.TestCase;
 
 import org.apache.pig.ExecType;
 import org.apache.pig.PigServer;
+import org.apache.pig.builtin.ToDate;
 import org.apache.pig.data.Tuple;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
@@ -77,7 +79,7 @@ public class TestDefaultDateTimeZone extends TestCase {
             Tuple actualTuple = actualItr.next();
             assertEquals(expectedTuple, actualTuple);
         }
-        assertEquals(expectedItr.hasNext(), actualItr.hasNext()); 
+        assertEquals(expectedItr.hasNext(), actualItr.hasNext());
     }
 
     private static Iterator<Tuple> generateExpectedResults(DateTimeZone dtz)
@@ -92,6 +94,68 @@ public class TestDefaultDateTimeZone extends TestCase {
         expectedResults.add(Util.buildTuple(new DateTime(
                 "1970-01-03T00:00:00.000", DateTimeZone.UTC)));
         return expectedResults.iterator();
+    }
+
+    public void testTimeZone() throws IOException {
+        // Usually set through "pig.datetime.default.tz"
+        String defaultDTZ = "+03:00";
+        DateTimeZone.setDefault(DateTimeZone.forOffsetMillis(DateTimeZone.forID(defaultDTZ)
+                .getOffset(null)));
+        String[] inputs = {
+                "1970-01-01T00:00:00.000-08:00",
+                "1970-01-01T00:00",
+                "1970-01-01T00",
+                "1970-01-01T",
+                "1970-01T",
+                "1970T",
+                "1970-01-01T00:00-08:00",
+                "1970-01-01T00-05:00",
+                "1970-01-01T-08:00",
+                "1970-01T-08:00",
+                //"1970T+8:00", //Invalid format
+                "1970-01-01",
+                "1970-01",
+                "1970",
+        };
+        String[] expectedDTZOutputs = {
+                "-08:00",
+                defaultDTZ,
+                defaultDTZ,
+                defaultDTZ,
+                defaultDTZ,
+                defaultDTZ,
+                "-08:00",
+                "-05:00",
+                "-08:00",
+                "-08:00",
+                defaultDTZ,
+                defaultDTZ,
+                defaultDTZ
+        };
+        String[] expectedDTOutputs = {
+                "1970-01-01T00:00:00.000-08:00",
+                "1970-01-01T00:00:00.000" + defaultDTZ,
+                "1970-01-01T00:00:00.000" + defaultDTZ,
+                "1970-01-01T00:00:00.000" + defaultDTZ,
+                "1970-01-01T00:00:00.000" + defaultDTZ,
+                "1970-01-01T00:00:00.000" + defaultDTZ,
+                "1970-01-01T00:00:00.000-08:00",
+                "1970-01-01T00:00:00.000-05:00",
+                "1970-01-01T00:00:00.000-08:00",
+                "1970-01-01T00:00:00.000-08:00",
+                "1970-01-01T00:00:00.000" + defaultDTZ,
+                "1970-01-01T00:00:00.000" + defaultDTZ,
+                "1970-01-01T00:00:00.000" + defaultDTZ
+        };
+
+        for( int i = 0; i < inputs.length; i++ ) {
+            DateTimeZone dtz = ToDate.extractDateTimeZone( inputs[i] );
+            assertEquals( expectedDTZOutputs[i], dtz.toString() );
+            DateTime dt = ToDate.extractDateTime( inputs[i] );
+            assertEquals( expectedDTOutputs[i], dt.toString() );
+            System.out.println( "\"" + dt + "\"," );
+        }
+
     }
 
 }
